log/build_2022-08-31_08-17-27/decoding_element/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/decoding_element/lib/python3.10/site-packages/decoding_element/decoding_element_trainer.py", line 106
    def decoding_element_talker_callback(self)
                                              ^
SyntaxError: expected ':'

  File "/workspace/BMI/install/decoding_element/lib/python3.10/site-packages/decoding_element/data_integrator.py", line 32
    entry_observation_groups = ['/system_{}/active_observation'.format(str(parameters['system'])]
                                                                                                ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('

